--- a/VanKroy/Data/index.html
+++ b/VanKroy/Data/index.html
@@ -10,15 +10,23 @@
     <header>
       <div id="banner">
         <h1>
-          <a href="index.html">ESP32 Dashboard</a>
+          <a href="index.html">Keebs'n'stuff</a>
         </h1>
       </div>
-      </header>
+      <div id="navBar">
+        <ul>
+          <li><a href="https://www.alexotos.com/keyboard-vendor-list/" target="_blank">Keyboard Vendor List</a></li>
+          <li><a href="https://www.reddit.com/r/MechanicalKeyboards/" target="_blank">MechanicalKeyboards</a></li>
+          <li><a href="https://www.reddit.com/r/ErgoMechKeyboards/" target="_blank">ErgoMechBoards</a></li>
+          <li><a href="https://bit.ly/ForzaHub" target="_blank">The Forza Hub</a></li>
+        </ul>
+      </div>
+    </header>
     <main {margin-bottom:auto;}>
       <div class="constrict">
-        <h2>Watch your ESP32 go up in flames. Or not. Your choice.</h2>
+        <h2>We wanna sell you some keebs. Or parts for it. It's your Keeb, so it's your choice, really.</h2>
         <p id="Text01">
-         VanKroy Ltd. EST. 2023
+          We're offering fully built custom mechanical keyboards, single parts, as well, as resources for all your (ergo)mechboard-needs!
         </p>
         <div class="grid">
           <a href="Corne.html" class="container">
@@ -33,11 +41,17 @@
               <p class="text">Parts</p>
             </div>
           </a>
+          <a href="Tester.html" class="container">
+            <img src="https://i.imgur.com/IX8m8ji.jpg" alt="Tester" class="image">
+            <div class="middle">
+              <p class="text">Accessories</p>
+            </div>
+          </a>
         </div>
       </div>
     </main>
     <footer id="footer" class="footer">
-      <p><a href="About.html">&copy; 2023 Alexander Hoy & Tobias Krutsch</a></p>
+      <p><a href="About.html">&copy; 2022 Christoph Hoy & Tobias Krutsch</a></p>
     </footer>
   </body>
 </html>
