--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         </p>
         <div class="grid">
           <a href="Corne.html" class="container">
-            <img src="https://i.imgur.com/FORLUdj.jpg" alt="Corne" class="image">
+            <img src="https://images.unsplash.com/photo-1686174778717-b7e864941866?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=652&q=80" alt="Corne" class="image">
             <div class="middle">
               <p class="text">Pre-builts</p>
             </div>
           </a>
           <a href="Parts.html" class="container">
-            <img src="https://i.imgur.com/stwOA5G.jpg" alt="Lavender" class="image">
+            <img src="https://images.unsplash.com/photo-1686608833103-efc7dd4d5bc1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2726&q=80" alt="Lavender" class="image">
             <div class="middle">
               <p class="text">Parts</p>
             </div>
