--- a/VanKroy/Data/index.html
+++ b/VanKroy/Data/index.html
@@ -10,48 +10,34 @@
     <header>
       <div id="banner">
         <h1>
-          <a href="index.html">Keebs'n'stuff</a>
+          <a href="index.html">ESP32 Dashboard</a>
         </h1>
       </div>
-      <div id="navBar">
-        <ul>
-          <li><a href="https://www.alexotos.com/keyboard-vendor-list/" target="_blank">Keyboard Vendor List</a></li>
-          <li><a href="https://www.reddit.com/r/MechanicalKeyboards/" target="_blank">MechanicalKeyboards</a></li>
-          <li><a href="https://www.reddit.com/r/ErgoMechKeyboards/" target="_blank">ErgoMechBoards</a></li>
-          <li><a href="https://bit.ly/ForzaHub" target="_blank">The Forza Hub</a></li>
-        </ul>
-      </div>
-    </header>
+      </header>
     <main {margin-bottom:auto;}>
       <div class="constrict">
-        <h2>We wanna sell you some keebs. Or parts for it. It's your Keeb, so it's your choice, really.</h2>
+        <h2>Watch your ESP32 go up in flames. Or not. Your choice.</h2>
         <p id="Text01">
-          We're offering fully built custom mechanical keyboards, single parts, as well, as resources for all your (ergo)mechboard-needs!
+         VanKroy Ltd. EST. 2023
         </p>
         <div class="grid">
           <a href="Corne.html" class="container">
-            <img src="https://i.imgur.com/FORLUdj.jpg" alt="Corne" class="image">
+            <img src="https://images.unsplash.com/photo-1686174778717-b7e864941866?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=652&q=80" alt="Corne" class="image">
             <div class="middle">
               <p class="text">Pre-builts</p>
             </div>
           </a>
           <a href="Parts.html" class="container">
-            <img src="https://i.imgur.com/stwOA5G.jpg" alt="Lavender" class="image">
+            <img src="https://images.unsplash.com/photo-1686608833103-efc7dd4d5bc1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2726&q=80" alt="Lavender" class="image">
             <div class="middle">
               <p class="text">Parts</p>
-            </div>
-          </a>
-          <a href="Tester.html" class="container">
-            <img src="https://i.imgur.com/IX8m8ji.jpg" alt="Tester" class="image">
-            <div class="middle">
-              <p class="text">Accessories</p>
             </div>
           </a>
         </div>
       </div>
     </main>
     <footer id="footer" class="footer">
-      <p><a href="About.html">&copy; 2022 Christoph Hoy & Tobias Krutsch</a></p>
+      <p><a href="About.html">&copy; 2023 Alexander Hoy & Tobias Krutsch</a></p>
     </footer>
   </body>
 </html>
